# 2048

./: .clang-format  .gitignore  CMakeLists.txt  README.md  display.c  main.c  makefile  test.c  untils.c  untils.h
.github/workflows/: build.yml
lib_configure/: mainConfigure.h.in
src/: display.c  display.h  main.c  untils.c  untils.h
tests/: display-test.c  test.c
